--- a/src/MirasvitGdpr/view/frontend/templates/customer/account/consents.phtml
+++ b/src/MirasvitGdpr/view/frontend/templates/customer/account/consents.phtml
@@ -1,4 +1,8 @@
 <?php
+/** @var \Magento\Framework\Escaper $escaper */
+
+use Magento\Framework\Escaper;
+
 /** @var \Mirasvit\Gdpr\Block\Customer\Account\Consents $block */
 $collection = $block->getAllCustomerConsents();
 ?>
